Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-959

Guththila parser can't handle comments.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.3.0
    • guththila
    • None
    • Windows XP SP2, libcurl

    Description

      It seems that Guththila can't properly print comments appreaing in XML. It simply adds an additional '-->' at the end unlike it's counterpart libxml2.

      Attachments

        1. diff.txt
          2 kB
          Senaka Fernando

        Activity

          People

            senakafdo Senaka Fernando
            senakafdo Senaka Fernando
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: